# SteerBot-DigitalTwin

./: .gitignore
Steeringwheel-Workspace/: .gitignore  README.md  bak_xia_robot.md  frames_2026-06-19_18.30.43.gv  piper_srdf_backup.srdf  start_dtp.sh
Steeringwheel-Workspace/ros2_ws/: .gitignore
Steeringwheel-Workspace/ros2_ws/src/g29_isaac_bridge/: package.xml  setup.cfg  setup.py
Steeringwheel-Workspace/ros2_ws/src/g29_isaac_bridge/g29_isaac_bridge/: AI_g29_pid_controller.py  aruco_detector.py  g29_pid_controller.py  g29_position_controller.py  g29_steering_node.py  test_g29_hid.py
Steeringwheel-Workspace/ros2_ws/src/piper_demo/: CMakeLists.txt  package.xml
Steeringwheel-Workspace/ros2_ws/src/piper_demo/include/piper_demo/: piper_grab_rotate.hpp
Steeringwheel-Workspace/ros2_ws/src/piper_demo/launch/: piper_demo.launch.py  piper_grab_rotate.launch.py  piper_pick_place.launch.py
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/: ai_wheel_hold_agent.py  piper_hold_wheel.py  ppo_wheel_inference_agent.py  train_ppo_wheel.py  train_ppo_wheel_big_action.py  wheel_angle_bridge.py
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard/PPO_1/: events.out.tfevents.1780735032.fas-da-simpc.2945196.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard/PPO_2/: events.out.tfevents.1780738349.fas-da-simpc.2971405.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard/PPO_3/: events.out.tfevents.1780739163.fas-da-simpc.2977311.0  events.out.tfevents.1780743880.fas-da-simpc.3001804.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_1/: events.out.tfevents.1780775555.fas-da-simpc.3308851.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_10/: events.out.tfevents.1781203828.fas-da-simpc.3649546.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_2/: events.out.tfevents.1780776262.fas-da-simpc.3309133.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_3/: events.out.tfevents.1780824627.fas-da-simpc.3321673.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_4/: events.out.tfevents.1780825394.fas-da-simpc.3322248.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_5/: events.out.tfevents.1781039765.fas-da-simpc.3460909.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_6/: events.out.tfevents.1781040168.fas-da-simpc.3462526.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_7/: events.out.tfevents.1781040193.fas-da-simpc.3462683.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_8/: events.out.tfevents.1781118425.fas-da-simpc.3535780.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/scripts/ppo_wheel_tensorboard_big_action/PPO_9/: events.out.tfevents.1781203805.fas-da-simpc.3649388.0
Steeringwheel-Workspace/ros2_ws/src/piper_demo/src/: piper_demo_node.cpp  piper_grab_rotate.cpp  piper_grab_rotate_main.cpp  piper_pick_place_node.cpp  piper_position_sensor_node.cpp
carla_steeringwheel_bridge/: package.xml  setup.cfg
carla_steeringwheel_bridge/carla_steeringwheel_bridge/: carla_steering_publisher.py  carla_vehicle_bridge.py  keyboard_teleop.py  vw_bus_spawner.py
carla_steeringwheel_bridge/launch/: carla_full_bridge.launch.py  carla_g29_bus_drive.launch.py
carla_steeringwheel_bridge/scripts/: enable_autopilot.py
(+95 files in other folders)
