<?xml version="1.0"?>
<package format="3">
  <name>carla_steeringwheel_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 bridge connecting G29 steering wheel, Piper arm, and sensors to CARLA simulator</description>
  <maintainer email="xiajiongxu@outlook.com">students_steeringwheel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
