<?xml version="1.0"?>
<package format="3">
  <name>g29_isaac_bridge</name>
  <version>0.0.1</version>
  <description>Publish Logitech G29 steering angle in radians for Isaac Sim (ROS2 Humble)</description>
  <maintainer email="xiajiongxu@outlook.com">students_steeringwheel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-evdev</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
